@@ -18,6 +18,9 @@ Release ...
 * dpost/troff -mcolor: CMYK colors and arbitrary PostScript color spaces
   can now be used. The "setcolor" procedure in "color.ps" has been renamed
   to "_setcolor" in order to make this possible.
+* [nt]roff: A ".psbb" command is now available to retrieve the bounding box
+  of a PostScript document (particularly of an EPS image).
+* dpost: DSC comments of included EPS images are now preserved.
 * dpost: PostScript pictures that contain binary data can be included now.
 * pic: Troff commands that begin with a "'" are now passed through.
 * grap: Negative zeros in coordinate tick labels are now avoided.
